2003-01-11  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/new/index.php: use new frs_dlstats_grouptotal_vw

	* www/include/features_boxes.php(show_top_downloads): use new
	frs_dlstats_grouptotal_vw.

	* cronjobs/db_stats_agg.php: remove file download stat
	calculations.

	* db/20030112.sql: new file.

	* common/frs/FRSRelease.class(create): yet another pg_atoi fix.

2003-01-10  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/themes/osx/Theme.class: valid XHTML 1.0 Transitional.

	* www/news/news_utils.php: make project summary valid XHTML 1.0
	Transitional.

	* www/include/trove.php: ditto.

	* www/include/Layout.class: ditto.

	* www/include/project_home.php: ditto.

	* www/include/html.php: make / valid XHTML 1.0 Transitional.

	* www/include/Layout.class: ditto.

	* www/include/languages/Base.tab: ditto.

	* common/include/utils.php: ditto.

	* www/index_std.php: ditto.

	* www/news/news_utils.php: ditto.

	* www/my/diary.php: bug 158: pg_atoi when inserting diary entry.

	* common/include/utils.php(util_make_links): exclude <> from
	URL regexp to avoid sucking in the <br /> tag.

	* www/include/html.php(html_image): XHTML compliance: <img> tag
	fixup

	* www/forum/include/ForumHTML.class: revert nl2br changes.

2003-01-10  Edward Ritter

	* Gargantuan patch to lower-case and bring our entire HTML
	within the realm of being XHTML-compliant. Significant refinement
	is still necessary to be 100% compliant.

2003-01-10  Tom Copeland <tom@infoether.com>

	* www/account/register.php,
	www/tracker/add.php,
	common/include/utils.php
	www/forum/include/ForumHTML.class: Began work on task #63 - adding a
	red * to all required fields.

2003-01-09  Ryan T. Sammartino  <ryants@shaw.ca>

	* common/include/session.php(session_issecure, session_redirect):
	use $HTTP_SERVER_VARS instead of $_SERVER.
	* db/20030109.sql: new file.
	* www/include/project_summary.php: use project_sums_agg table for
	fora and forum message count.